@@ -1,24 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" >
-
-<html>
-<body>
-
-<h1>Applet 1</h1>
-<p><APPLET CODE="applet.class" CODEBASE="resources" HEIGHT="60" WIDTH="300" hspace="100">
-    <PARAM NAME="message" VALUE="Scrolling banner text !!!">
-    <param name="bgcolor" value="0000FF">
-</APPLET></p>
-<p>Applet 1 is using HSPACE of 100 pixels. As a result, there show be extra whitespace on the left and right side of this applet.
-
-<h1>Applet 2</h1>
-<APPLET CODE="applet.class" CODEBASE="resources" HEIGHT="60" WIDTH="300">
-    <PARAM NAME="message" VALUE="Scrolling banner text !!!">
-    <param name="bgcolor" value="0000FF">
-</APPLET></p>
-<p>As a comparison, this Applet 2 has NO hspace attribute specified. It should have no extra whitespace on the left or right side of the applet.
-
-</body>
-</html>
-
-
-
