@@ -1,22 +1,0 @@
-layer at (0,0) size 800x600
-  RenderCanvas at (0,0) size 800x600
-layer at (0,0) size 800x600
-  RenderBlock {HTML} at (0,0) size 800x600
-    RenderBody {BODY} at (8,8) size 784x576
-      RenderBlock {H1} at (0,0) size 784x37
-        RenderText {TEXT} at (0,0) size 117x37
-          text run at (0,0) width 117: "Applet 1"
-      RenderBlock {P} at (0,58) size 784x240
-        RenderApplet {APPLET} at (0,90) size 300x60
-      RenderBlock {P} at (0,314) size 784x36
-        RenderText {TEXT} at (0,0) size 774x36
-          text run at (0,0) width 774: "Applet 1 is using VSPACE of 100 pixels. As a result, there show be extra whitespace above and below this applet. Even if"
-          text run at (0,18) width 635: "there's no applet loaded, you can tell if this succeeds or fails by comparing with the other case below."
-      RenderBlock {H1} at (0,371) size 784x37
-        RenderText {TEXT} at (0,0) size 117x37
-          text run at (0,0) width 117: "Applet 2"
-      RenderBlock {P} at (0,429) size 784x60
-        RenderApplet {APPLET} at (0,0) size 300x60
-      RenderBlock {P} at (0,505) size 784x18
-        RenderText {TEXT} at (0,0) size 754x18
-          text run at (0,0) width 754: "As a comparison, this Applet 2 has NO vspace attribute specified. It should have no extra whitespace above or below it."
