@@ -1,8 +1,0 @@
-import java.awt.*;
-import java.applet.*;
-public class applet extends Applet
-{
-    public void paint(Graphics g) {
-        g.fillRect(0, 0, 10000, 10000);
-    }
-}
